<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/FondoSecundario"
    tools:context=".Rutas.Fichas.FichaEspecial.Contrato">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/siguiente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="65dp"
        android:clickable="true"
        android:elevation="10dp"
        android:src="@drawable/ic_check"
        app:backgroundTint="@color/AzulOscuro"
        tools:ignore="SpeakableTextPresentCheck" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="75dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="70dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tituloContrato"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/AzulOscuro"
                android:gravity="center_horizontal|center_vertical"
                android:padding="4dp"
                android:text="Compromiso de Tratamiento"
                android:textColor="@color/Blanco"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/parrafo1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:text="@string/parrafo1"
                android:textColor="@color/Blanco"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/parrafo2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:text="@string/parrafo2"
                android:textColor="@color/Blanco"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/parrafo3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:text="@string/parrafo3"
                android:textColor="@color/Blanco"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/parrafo4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:text="@string/parrafo4"
                android:textColor="@color/Blanco"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/parrafo5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:text="@string/parrafo5"
                android:textColor="@color/Blanco"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/parrafo6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:text="@string/parrafo6"
                android:textColor="@color/Blanco"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/parrafo7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:text="@string/parrafo7"
                android:textColor="@color/Blanco"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/parrafo8"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:background="@color/AzulOscuro"
                android:gravity="center_vertical|center_horizontal"
                android:padding="4dp"
                android:text="Firma del Odontólogo"
                android:textColor="@color/Blanco"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/firma"
                android:layout_width="250dp"
                android:layout_height="135dp"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_marginTop="15dp"
                android:src="@color/Blanco" />

            <TextView
                android:id="@+id/parrafo9"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:background="@color/AzulOscuro"
                android:gravity="center_vertical|center_horizontal"
                android:padding="4dp"
                android:text="Firma del Paciente"
                android:textColor="@color/Blanco"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/firmaPaciente"
                android:layout_width="250dp"
                android:layout_height="135dp"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_marginTop="15dp"
                android:src="@color/Blanco" />
        </LinearLayout>
    </ScrollView>
</FrameLayout>